@@ -10,6 +10,9 @@ What's New in Python 3.7.0 alpha 1?
 Core and Builtins
 -----------------
 
+- bpo-24821: Fixed the slowing down to 25 times in the searching of some
+  unlucky Unicode characters.
+
 - bpo-29695: Using "x" as a keyword argument in int(), bool() and float() and
   using "sequence" as a keyword argument in list() and tuple() are deprecated.
   Specify the value as a positional argument instead.
